# capability-map

./: .mcp.json  CLAUDE.md  Cargo.toml  MANUFACTURE-START.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md
.agents/: original_prompt.md
.agents/explorer_analysis/: BRIEFING.md  analysis.md  handoff.md  original_prompt.md  progress.md
.agents/orchestrator/: BRIEFING.md  original_prompt.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/sub_orch_e2e_gen2/: BRIEFING.md  original_prompt.md  progress.md  recovered_test_runner.py
.agents/sub_orch_impl/: BRIEFING.md  progress.md
.agents/worker_completion/: BRIEFING.md  original_prompt.md  progress.md
.agents/worker_m2_gen3_repl/: BRIEFING.md  original_prompt.md  progress.md  task.md
.cpmp/: GEMINI-MANUFACTURE.md  all_project_files.txt  workspace.sqlite
.cpmp/catalog/: cpmp-catalog.ttl
.cpmp/gemini-outputs/: phase-discovery-portfolio-stderr.txt
.cpmp/prompts/: phase-0-foundation.txt  phase-1-canon.txt  phase-2-receipt.txt  phase-3-gall-cap.txt  phase-4-manifold.txt  phase-discovery-portfolio.txt
.cpmp/receipts/: scan_9991e4ca-feb8-49a8-8ffd-34854a117eca.toml  scan_a18fe247-725e-4323-8ffa-b376014b1b1d.toml  scan_dfe1b8a7-9910-42ad-b0f9-67de92d8a49c.toml
.cpmp/reports/: CAPABILITY_INVENTORY.md
docs/enterprise/: AUTHZ.md  (+11 more)
scripts/: cpmp-manufacture.sh  gemini-invoke.sh  smoke.sh
src/: capability.rs  classification.rs  db.rs  error.rs  gates.rs  lib.rs  main.rs  models.rs  policy.rs  projection.rs  rdf.rs  receipt.rs  report.rs  scanner.rs  symbol.rs
tests/: integration_tests.rs
(+15 files in other folders)
