[package]
name = "cpmp"
version = "0.1.0"
edition = "2021"
description = "Computer Project Mapping Protocol — local project/capability surveyor backed by Open Ontologies"
license = "MIT"

[[bin]]
name = "cpmp"
path = "src/main.rs"

[lib]
name = "cpmp"
path = "src/lib.rs"

[dependencies]
anyhow        = "1.0"
blake3        = "1.4"
chrono        = { version = "0.4", features = ["serde"] }
clap          = { version = "4.5", features = ["derive"] }
comfy-table   = "7"
hex           = "0.4"
ignore        = "0.4"
oxigraph      = "0.4"
regex         = "1.10"
rusqlite      = { version = "0.32", features = ["bundled"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
sha2          = "0.10"
thiserror     = "2"
toml          = { version = "0.8", features = ["parse"] }
uuid          = { version = "1.8", features = ["v4"] }
walkdir       = "2.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2"
predicates = "3"
